--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main">#2196F3</color>
-    <color name="secondary">#8BC34A</color>
+    <color name="main">#54A3E3</color>
+    <color name="secondary">#C18D41</color>
 </resources>
