--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -9,13 +9,13 @@
 
     <ImageButton
         android:id="@+id/ibt_users"
-        android:layout_width="68dp"
-        android:layout_height="72dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:contentDescription="@string/ibt_users"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_admin"
         app:srcCompat="@android:drawable/ic_menu_myplaces" />
 
     <TextView
@@ -29,24 +29,33 @@
         app:layout_constraintTop_toBottomOf="@+id/ibt_users" />
 
     <ImageButton
-        android:id="@+id/ibt_profile"
+        android:id="@+id/ibt_profile_admin"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:contentDescription="@string/ibt_profile"
         app:layout_constraintStart_toEndOf="@+id/ibt_users"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_admin"
         app:srcCompat="@android:drawable/btn_star_big_on" />
 
     <TextView
-        android:id="@+id/tv_ibt_profile"
+        android:id="@+id/tv_ibt_profile_admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ibt_profile"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/ibt_profile"
-        app:layout_constraintStart_toStartOf="@+id/ibt_profile"
-        app:layout_constraintTop_toBottomOf="@+id/ibt_profile" />
+        app:layout_constraintEnd_toEndOf="@+id/ibt_profile_admin"
+        app:layout_constraintStart_toStartOf="@+id/ibt_profile_admin"
+        app:layout_constraintTop_toBottomOf="@+id/ibt_profile_admin" />
+
+    <TextView
+        android:id="@+id/tv_welcome_admin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Admin"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
