--- a/app/src/main/res/layout/change_pass_dialog.xml
+++ b/app/src/main/res/layout/change_pass_dialog.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradient_background">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -18,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dialog_change_pass"
-            android:textSize="34sp" />
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/et_old_pass"
