DONE: BookProfile, UpdateBook and DeleteBook TODO: Comments, Rates, Bookings

--- a/app/src/main/res/layout/add_book_dialog.xml
+++ b/app/src/main/res/layout/add_book_dialog.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="250dp"
     android:layout_height="wrap_content"
     android:background="@drawable/gradient_background"
     android:orientation="vertical">
@@ -15,7 +15,7 @@
         android:textSize="34sp" />
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -25,7 +25,7 @@
 
             <EditText
                 android:id="@+id/et_ab_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:ems="10"
                 android:hint="@string/ab_name"
@@ -33,7 +33,7 @@
 
             <EditText
                 android:id="@+id/et_ab_author"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:ems="10"
                 android:hint="@string/ab_author"
@@ -45,15 +45,14 @@
                 android:layout_height="48dp"
                 android:ems="10"
                 android:hint="@string/ab_publish_date"
-                android:inputType="textPersonName" />
+                android:inputType="date" />
 
-            <EditText
+            <Spinner
                 android:id="@+id/et_ab_type"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:hint="@string/ab_type"
-                android:inputType="textPersonName" />
+                android:hint="@string/ab_type" />
 
             <EditText
                 android:id="@+id/et_ab_create_date"
@@ -61,7 +60,7 @@
                 android:layout_height="48dp"
                 android:ems="10"
                 android:hint="@string/ab_create_date"
-                android:inputType="textPersonName" />
+                android:inputType="date" />
 
             <EditText
                 android:id="@+id/et_ab_cover"
@@ -80,13 +79,12 @@
                 android:hint="@string/ab_description"
                 android:inputType="textPersonName" />
 
-            <EditText
+            <Spinner
                 android:id="@+id/et_ab_rate"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:hint="@string/ab_rating"
-                android:inputType="textPersonName" />
+                android:hint="@string/ab_rating" />
         </LinearLayout>
     </ScrollView>
 
@@ -99,6 +97,7 @@
             android:id="@+id/bt_ab_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="@string/bt_ab_add" />
 
@@ -106,6 +105,7 @@
             android:id="@+id/bt_ab_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="@string/bt_ab_exit" />
     </LinearLayout>
