--- a/app/src/main/res/menu/admin_main_menu.xml
+++ b/app/src/main/res/menu/admin_main_menu.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_settings"
         android:title="@string/menu_logout"
-        app:showAsAction="never">
-    </item>
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_lock_idle_lock"/>
 </menu>
